--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,1 +1,3 @@
-<p>heroes works!</p>
+<h2>{{hero.name | uppercase}} details</h2>
+<div>id: <span>{{hero.id}}</span></div>
+<div>name: <span>{{hero.name}}</span></div>
