--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,3 +1,5 @@
-<h2>{{hero.name | uppercase}} details</h2>
-<div>id: <span>{{hero.id}}</span></div>
-<div>name: <span>{{hero.name}}</span></div>
+<div>
+	<label>name:
+		<input [(ngModel)]="hero.name" placeholder="name"/>
+	</label>
+</div>
