--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,5 +1,20 @@
+<h2>My Heroes</h2>
+
+<!-- This shows only on hero
+	<div>
+		<ul class="heros">
+			<li>
+				<span class="badge">{{hero.id}}</span> {{hero.name}}
+			</li>
+		</ul>
+	</div> -->
+
+<!-- Let us try to show all heros in a list-->
+
 <div>
-	<label>name:
-		<input [(ngModel)]="hero.name" placeholder="name"/>
-	</label>
+	<ul class="heroes">
+		<li *ngFor="let hero of heroes" (click)="onSelect(hero)">
+			<span class="badge">{{hero.id}}</span> {{hero.name}}
+		</li>
+	</ul>
 </div>
